packages/pulse-core/force-app/main/default/objects/Workflow_Instance__c/Workflow_Instance__c.object-meta.xml
<CustomObject>
    <label>Workflow Instance</label>
    <pluralLabel>Workflow Instances</pluralLabel>
    <nameField>
        <label>Instance Number</label>
        <displayFormat>WI-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Active workflow execution on a parent record. Tracks current state and pinned definition version.</description>
</CustomObject>