packages/pulse-core/force-app/main/default/objects/Workflow_Instance__c/fields/Context_JSON__c.field-meta.xml
<CustomField>
    <fullName>Context_JSON__c</fullName>
    <label>Context JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>