packages/pulse-core/force-app/main/default/objects/Workflow_Instance__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <label>Current State</label>
    <type>Text</type>
    <length>80</length>
</CustomField>