packages/pulse-core/force-app/main/default/objects/Workflow_Instance__c/fields/Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>Stage_Status__c</fullName>
    <label>Stage Status</label>
    <description>Operational override for the current phase: Active is the default; On_Hold, Escalated, Paused, and Waiting_External surface as badges in the runtime UI.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On_Hold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Waiting_External</fullName>
                <label>Waiting External</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>